Implement GetBook
